k8s/apps/ingress/evolution-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evolution-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: evolution.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-evolution
                port:
                  number: 8080
