k8s/apps/ingress/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  labels:
    app: n8n
    domain: automacao
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: n8n.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-n8n
            port:
              number: 5678
